build/production/noncore-mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noncore-mqtt
  namespace: production
spec:
  selector:
    matchLabels:
      app: noncore-mqtt
  template:
    metadata:
      labels:
        app: noncore-mqtt
    spec:
      containers:
        - name: noncore-mqtt
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/noncore-mqtt:latest
          args: ["npm", "run", "start:mqtt"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.5"
            limits:
              memory: "512Mi"
              cpu: "1"
