build/production/noncore-mqtt/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: noncore-mqtt-ingress
  namespace: production
  labels:
    app: noncore-mqtt
spec:
  rules:
    - host: mqtt.rfcx.org
      http:
        paths:
          - backend:
              serviceName: noncore-mqtt-service
              servicePort: 80
